# xai-aviation-rul

./: .gitignore  README.md  pyproject.toml
notebooks/: data-exploration.ipynb  models_training.ipynb  xai_analysis.ipynb
src/aviation_rul.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/xai_aviation_rul/: __init__.py  data_loader.py  explainer.py  models.py  preprocessor.py  visualizer.py
tests/: conftest.py  test_data_loader.py  test_explainer.py  test_models.py  test_preprocessor.py  test_visualizer.py
