[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aviation-rul"
version = "0.1.0"
description = "Explainable AI for Remaining Useful Life (RUL) prediction in turbofan engines using C-MAPSS dataset."
authors = [
    { name = "Avishek Chanda" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "shap>=0.44",
    "xgboost>=2.0",
    "scipy>=1.11",
    "joblib>=1.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1.0",
    "jupyter>=1.0",
    "ipykernel>=6.0"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "py312venv*", "data*", "models*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov-report=term-missing"